# cran-orchestrator

./: .gitignore  LICENSE  README.md  main.py
cloud_orchestrator/: README.md  openrc  openstack-example.py  requirements.txt  setup.py  tox.ini
cloud_orchestrator/cloud_orchestrator/: credentials.py  example.py  orchestrator.py
cloud_orchestrator/test/: openrc  test_orchestrator.py
control_panel/: __init__.py  config.py  index.html  server.py
control_panel/css/: cran-orchestrator.css
control_panel/javascript/: common.js  load-generator.js  log-collector.js  main.js  openstack-client.js  resource-mapper.js
load_generator/: __init__.py  config.py  load_generator.py  main.py  requirements.txt  rrh.py  server.py  udp_connection.py  udp_socket.py
log_collector/: __init__.py  config.py  log_collector.py  server.py
odl_restconf/: api.py  config.py  flow.py  group.py  resource_mapper.py  server.py  topology.py
openstack_client/: __init__.py  config.py  pylint.rc  requirements.txt  server.py  setup.cfg  tox.ini
openstack_client/cloud_orchestrator/: orchestrator.py
openstack_client/test/: openrc
resource_mapper/: __init__.py  api.py  config.py  flow.py  group.py  requirements.txt  resource_mapper.py  server.py  topology.py
test/bbu/: server.py
test/preload/: configuration.demo.json  configuration.json  loader.py
test/udp/: client.py  server.py
tools/: allocator.py  bbu-server.py  hypervisor-daemon.py  nwstats.py  odl-watchdog.py
