[metadata]
name = cloud-orchestrator
summary = Openstack orchestrator for CloudRan
description-file =
    README.md
author = 'Kerim Gokarslan'
author-email = 'kerimgokarslan@gmail.com'
home-page = https://github.com/uzum/cran-orchestrator
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7

[files]
packages =
    cloud_orchestrator
